--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
-  "name": "baileys-bot",
+  "name": "baileys-whatsapp-bot",
   "version": "1.0.0",
-  "description": "Simple WhatsApp bot using Baileys",
+  "description": "Simple WhatsApp bot using Baileys with pairing code, deployable on free hosting like Render",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.0",
-    "pino": "^8.0.0",
-    "qrcode-terminal": "^0.12.0"
-  }
+    "pino": "^8.17.0"
+  },
+  "keywords": [
+    "whatsapp",
+    "baileys",
+    "bot",
+    "render",
+    "free-hosting",
+    "pairing"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
